--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.28)
 
 project(iap)
 
-add_executable(iap iap.c ip.c ip-parse.c ip-range.c inflate.c invert.c filter.c)
+add_executable(iap src/iap.c src/ip.c src/proc.c)
+target_include_directories(iap PRIVATE include)
